chore(deps): upgrade

--- a/apps/weapp-wechat-zhihu/package.json
+++ b/apps/weapp-wechat-zhihu/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weapp-wechat-zhihu",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "",
   "license": "ISC",
