--- a/apps/weapp-library/package.json
+++ b/apps/weapp-library/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weapp-library",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "",
   "license": "ISC",
