--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -1,7 +1,6 @@
 {
   "name": "weapp-vite",
-  "type": "module",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "weapp-vite 一个现代化的小程序打包工具",
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
@@ -69,21 +68,22 @@
     "exports": {
       ".": {
         "types": "./dist/index.d.ts",
-        "import": "./dist/index.js",
+        "import": "./dist/index.mjs",
         "require": "./dist/index.cjs"
       },
       "./config": {
         "types": "./dist/config.d.ts",
-        "import": "./dist/config.js",
+        "import": "./dist/config.mjs",
         "require": "./dist/config.cjs"
       },
       "./package.json": "./package.json"
     },
     "main": "./dist/index.cjs",
-    "module": "./dist/index.js",
+    "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "bin": {
-      "weapp-vite": "bin/weapp-vite.js"
+      "weapp-vite": "bin/weapp-vite.js",
+      "weapp-vite-esm": "bin/weapp-vite-esm.js"
     }
   }
 }
