--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "devDependencies": {
     "@ast-grep/napi": "^0.26.1",
     "@babel/core": "^7.25.2",
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
