--- a/website-weapp-vite/package.json
+++ b/website-weapp-vite/package.json
@@ -13,7 +13,8 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
-    "@shikijs/vitepress-twoslash": "^1.13.0",
-    "vitepress": "^1.3.2"
+    "@shikijs/vitepress-twoslash": "^1.14.1",
+    "vitepress": "^1.3.3",
+    "weapp-vite": "workspace:*"
   }
 }
