feat: support https://github.com/sonofmagic/weapp-tailwindcss/discussions/369

--- a/apps/vite-native/package.json
+++ b/apps/vite-native/package.json
@@ -10,6 +10,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "weapp-vite dev",
+    "dev:0": "weapp-vite dev -m x",
+    "dev:1": "weapp-vite dev --mode xx",
     "build": "weapp-vite build",
     "open": "weapp-vite open",
     "postinstall": "weapp-tw patch",
