--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -50,8 +50,8 @@
     "@weapp-core/init": "workspace:^",
     "@weapp-core/logger": "workspace:^",
     "@weapp-core/shared": "workspace:^",
+    "cac": "^6.7.14",
     "chokidar": "^3.6.0",
-    "commander": "^12.1.0",
     "debug": "^4.3.6",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
@@ -60,6 +60,7 @@
     "magic-string": "^0.30.11",
     "micromatch": "^4.0.7",
     "pathe": "^1.1.2",
+    "picocolors": "^1.0.1",
     "pkg-types": "^1.1.3",
     "vite-tsconfig-paths": "^5.0.1",
     "weapp-ide-cli": "workspace:^"
