--- a/tailwindcss-weapp/.npmrc
+++ b/tailwindcss-weapp/.npmrc
@@ -4,3 +4,8 @@ registry=http://registry.npmmirror.com/
 shamefully-hoist=true
 
 ignore-engines=true
+
+# node-linker=node-modules
+# ignore-workspace=true
+# include-workspace-root=false
+ignore-workspace-root-check=true
