--- a/packages/weapp-ide-cli/package.json
+++ b/packages/weapp-ide-cli/package.json
@@ -32,7 +32,7 @@
   "module": "./src/index.ts",
   "types": "./src/index.ts",
   "bin": {
-    "weapp": "src/bin.js"
+    "weapp": "dev/bin.js"
   },
   "files": [
     "bin",
