--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -135,7 +135,7 @@
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
     "release": "node scripts/release.js",
-    "generate:readme": "tsx scripts/readme/write.ts",
+    "generate:readme": "tsx --watch scripts/readme/write.ts watch scripts/readme/**/*",
     "lint": "eslint .",
     "lint:fix": "eslint ./src --fix",
     "-------": "-----------",
@@ -147,10 +147,10 @@
   },
   "dependencies": {
     "@ast-core/escape": "~1.0.1",
-    "@babel/generator": "~7.25.5",
-    "@babel/parser": "~7.25.4",
-    "@babel/traverse": "~7.25.4",
-    "@babel/types": "~7.25.4",
+    "@babel/generator": "~7.25.6",
+    "@babel/parser": "~7.25.6",
+    "@babel/traverse": "~7.25.6",
+    "@babel/types": "~7.25.6",
     "@csstools/postcss-is-pseudo-class": "~4.0.8",
     "@tailwindcss-mangle/shared": "~3.0.0",
     "@weapp-core/escape": "~2.1.0",
@@ -161,7 +161,7 @@
     "lru-cache": "10.4.3",
     "magic-string": "0.30.11",
     "md5": "2.3.0",
-    "postcss": "~8.4.41",
+    "postcss": "~8.4.42",
     "postcss-rem-to-responsive-pixel": "~6.0.1",
     "postcss-selector-parser": "~6.1.2",
     "semver": "~7.6.2",
