--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -40,21 +40,21 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-app-harmony": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-components": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-jd": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-app": "3.0.0-4020420240722002",
+    "@dcloudio/uni-app-harmony": "3.0.0-4020420240722002",
+    "@dcloudio/uni-app-plus": "3.0.0-4020420240722002",
+    "@dcloudio/uni-components": "3.0.0-4020420240722002",
+    "@dcloudio/uni-h5": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-jd": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-lark": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-qq": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4020420240722002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4020420240722002",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
     "eventemitter3": "^5.0.1",
@@ -70,17 +70,17 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4010920240607001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4010920240607001",
+    "@dcloudio/uni-automator": "3.0.0-4020420240722002",
+    "@dcloudio/uni-cli-shared": "3.0.0-4020420240722002",
+    "@dcloudio/uni-stacktracey": "3.0.0-4020420240722002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4020420240722002",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@vue/runtime-core": "^3.4.21",
-    "@weapp-tailwindcss/cli": "^1.0.8",
+    "@weapp-tailwindcss/cli": "^1.0.9",
     "@weapp-tailwindcss/typography": "^0.2.4",
     "autoprefixer": "^10.4.18",
     "miniprogram-api-typings": "^3.12.2",
@@ -94,8 +94,8 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
     "vite": "5.2.8",
-    "weapp-ide-cli": "^2.0.1",
-    "weapp-tailwindcss": "^3.5.0",
+    "weapp-ide-cli": "^2.0.3",
+    "weapp-tailwindcss": "^3.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
