--- a/website/netlify.toml
+++ b/website/netlify.toml
@@ -1,4 +1,7 @@
+# https://docs.netlify.com/configure-builds/file-based-configuration/
+
 [build]
+base = "website/"
 publish = "build"
 command = "pnpm run build"
 
