chore: change netlify.toml

--- a/website-weapp-vite/netlify.toml
+++ b/website-weapp-vite/netlify.toml
@@ -3,7 +3,7 @@
 [build]
 base = "website-weapp-vite/"
 publish = "dist"
-command = "pnpm run build:vite-docs"
+command = "pnpm run build"
 
 [build.environment]
 NODE_VERSION = "20"
