--- a/packages/tailwindcss-core-plugins-extractor/package.json
+++ b/packages/tailwindcss-core-plugins-extractor/package.json
@@ -5,7 +5,7 @@
   "description": "tailwindcss-core-plugins-extractor",
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
-  "homepage": "https://weapp-tw.icebreaker.top",
+  "homepage": "https://tw.icebreaker.top",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git"
