chore(deps): upgrade

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.7.1",
+  "packageManager": "pnpm@9.9.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
@@ -99,11 +99,14 @@
     "@babel/core": "^7.25.2",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
+    "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/prompt-cli": "^19.4.1",
     "@commitlint/types": "^19.0.3",
     "@eslint/config-inspector": "^0.5.4",
     "@icebreakers/eslint-config": "^0.4.0",
     "@icebreakers/readme": "0.1.0",
+    "@icebreakers/stylelint-config": "^0.0.3",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-json": "^6.1.0",
@@ -130,8 +133,10 @@
     "@types/gulp-sass": "^5.0.4",
     "@types/js-beautify": "^1.14.3",
     "@types/klaw": "^3.0.6",
+    "@types/lint-staged": "^13.3.0",
     "@types/loader-utils": "^2.0.6",
     "@types/lodash": "^4.17.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.5.2",
@@ -158,12 +163,12 @@
     "debug": "4.3.6",
     "dedent": "^1.5.3",
     "deep-object-diff": "^1.1.9",
-    "defu": "6.1.4",
+    "defu": "^6.1.4",
     "del": "^7.1.0",
     "diff": "^5.2.0",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "eslint": "9.9.1",
+    "eslint": "^9.9.1",
     "eslint-config-icebreaker": "^1.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -181,9 +186,11 @@
     "klaw": "^4.1.0",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.1",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^4.1.0",
+    "only-allow": "^1.2.1",
     "pathe": "^1.1.2",
     "pkg-types": "^1.2.0",
     "postcss": "^8.4.44",
@@ -192,6 +199,7 @@
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "promisify-loader-runner": "^1.0.1",
+    "rimraf": "^6.0.1",
     "rollup": "^4.21.2",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.8",
@@ -205,13 +213,14 @@
     "tsup": "^8.2.4",
     "tsx": "^4.19.0",
     "turbo": "^2.1.1",
-    "typescript": "5.5.4",
+    "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "uuid": "^10.0.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
     "vite": "^5.4.2",
     "vite-plugin-inspect": "^0.8.7",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.94.0",
