--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "@ast-grep/napi": "^0.26.3",
     "@babel/core": "^7.25.2",
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.7",
+    "@changesets/cli": "^2.27.8",
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@commitlint/prompt-cli": "^19.4.1",
@@ -107,6 +107,7 @@
     "@icebreakers/eslint-config": "^0.4.0",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.0.3",
+    "@pnpm/workspace.find-packages": "^4.0.9",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-json": "^6.1.0",
@@ -123,6 +124,7 @@
     "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
+    "@types/git-url-parse": "^9.0.3",
     "@types/gulp": "^4.0.17",
     "@types/gulp-debug": "^2.0.36",
     "@types/gulp-if": "^3.0.4",
@@ -139,7 +141,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.3",
     "@types/semver": "^7.5.8",
     "@types/set-value": "^4.0.3",
     "@types/uuid": "^10.0.0",
@@ -177,6 +179,7 @@
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "get-value": "^3.0.1",
+    "git-url-parse": "^15.0.0",
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.1.0",
@@ -187,6 +190,7 @@
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "micromatch": "^4.0.8",
     "mini-css-extract-plugin": "^2.9.1",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^4.1.0",
@@ -205,6 +209,7 @@
     "sass": "^1.77.8",
     "semver": "7.6.3",
     "set-value": "^4.1.0",
+    "simple-git": "^3.26.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.10",
     "ts-morph": "^23.0.0",
@@ -224,6 +229,7 @@
     "vitest": "^2.0.5",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.94.0",
-    "webpack-build-utils": "^0.0.7"
+    "webpack-build-utils": "^0.0.7",
+    "yaml": "^2.5.1"
   }
 }
