--- a/turbo.json
+++ b/turbo.json
@@ -1,13 +1,26 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
-    "build": {},
-    "lint": {},
-    "dev": {
-      "cache": false,
-      "persistent": true
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
     },
-    "sync": {},
-    "test": {}
+    "lint": {
+      "outputs": []
+    },
+    "dev": {
+      "cache": false
+    },
+    "test": {
+      "dependsOn": [
+        "^build"
+      ]
+    },
+    "release": {},
+    "sync": {}
   }
 }
