--- a/apps/weapp-library/package.json
+++ b/apps/weapp-library/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "author": "",
+  "author": "ice breaker <1324318532@qq.com>",
   "license": "ISC",
   "keywords": [],
   "main": "index.js",
@@ -16,5 +16,13 @@
   },
   "devDependencies": {
     "miniprogram-api-typings": "latest"
+  },
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "apps/weapp-library"
   }
 }
