--- a/demo/package.json
+++ b/demo/package.json
@@ -48,5 +48,14 @@
     "fs-extra": "^11.2.0",
     "lodash": "^4.17.21"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo"
+  },
+  "author": "ice breaker <1324318532@qq.com>"
 }
