--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.1.1",
   "description": "weapp-vite 一个现代化的小程序打包工具",
-  "author": "SonOfMagic <qq1324318532@gmail.com>",
+  "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
   "homepage": "https://vite.icebreaker.top/",
   "repository": {
