--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -79,5 +79,14 @@
     "ios >= 8",
     "chrome >= 47"
   ],
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/mpx-app"
+  },
+  "author": "ice breaker <1324318532@qq.com>"
 }
