--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "author": "",
+  "author": "ice breaker <1324318532@qq.com>",
   "license": "ISC",
   "scripts": {
     "dev": "npm run start",
@@ -74,5 +74,13 @@
     "webpack-cli": "^5.1.4",
     "webpack-sources": "^3.2.3"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/native-mina"
+  }
 }
