--- a/demo/native/package.json
+++ b/demo/native/package.json
@@ -8,7 +8,7 @@
     "build:babel": "echo build:babel"
   },
   "keywords": [],
-  "author": "",
+  "author": "ice breaker <1324318532@qq.com>",
   "license": "ISC",
   "devDependencies": {
     "@weapp-tailwindcss/cli": "^1.0.9",
@@ -22,5 +22,13 @@
     "weapp-tailwindcss": "^3.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/native"
+  }
 }
