--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rax-materials/scaffolds-app-ts",
-  "author": "rax",
+  "author": "ice breaker <1324318532@qq.com>",
   "description": "Rax 无线跨端应用工程，使用 TypeScript。",
   "version": "0.1.0",
   "scripts": {
@@ -48,5 +48,13 @@
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts",
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/rax-app"
+  }
 }
