--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -38,7 +38,7 @@
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
-  "author": "",
+  "author": "ice breaker <1324318532@qq.com>",
   "dependencies": {
     "@babel/runtime": "^7.24.4",
     "@tarojs/components": "4.0.4",
@@ -90,5 +90,13 @@
     "weapp-ide-cli": "^2.0.3",
     "weapp-tailwindcss": "^3.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
+  },
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/taro-app-vite"
   }
 }
