--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -37,7 +37,7 @@
     "Android >= 4.1",
     "ios >= 8"
   ],
-  "author": "",
+  "author": "ice breaker <1324318532@qq.com>",
   "dependencies": {
     "@babel/runtime": "^7.25.0",
     "@tarojs/components": "4.0.4",
@@ -95,5 +95,13 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/taro-app"
+  }
 }
