--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -98,5 +98,14 @@
     "weapp-tailwindcss": "^3.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/uni-app-vue3-vite"
+  },
+  "author": "ice breaker <1324318532@qq.com>"
 }
