--- a/how-to-build-components-by-tailwindcss/react-lib/package.json
+++ b/how-to-build-components-by-tailwindcss/react-lib/package.json
@@ -53,5 +53,14 @@
     "vite-plugin-dts": "^3.6.0",
     "@tarojs/components": "^3.6.17"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "how-to-build-components-by-tailwindcss/react-lib"
+  },
+  "author": "ice breaker <1324318532@qq.com>"
 }
