--- a/tailwindcss-weapp/package.json
+++ b/tailwindcss-weapp/package.json
@@ -2,6 +2,15 @@
   "name": "tailwindcss-weapp",
   "version": "0.0.0",
   "private": true,
+  "author": "ice breaker <1324318532@qq.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "tailwindcss-weapp"
+  },
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
   "scripts": {
     "bootstrap": "pnpm i --ignore-workspace",
     "dev": "uni -p mp-weixin",
