--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,15 @@
   "name": "website",
   "version": "0.0.0",
   "private": true,
+  "author": "ice breaker <1324318532@qq.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "website"
+  },
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
   "engines": {
     "node": ">=16.14"
   },
