chore: format code

--- a/apps/native-ts-skyline/tsconfig.json
+++ b/apps/native-ts-skyline/tsconfig.json
@@ -16,10 +16,10 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": [
     "./**/*.ts"
