--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "simple-git": "^3.26.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.10",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-morph": "^23.0.0",
     "tsd": "^0.31.2",
     "tslib": "^2.7.0",
