--- a/tailwindcss-weapp/package.json
+++ b/tailwindcss-weapp/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "bootstrap": "pnpm i --ignore-workspace",
+    "upgrade": "pnpm up -Li --ignore-workspace",
     "dev": "uni -p mp-weixin",
     "build": "npm run build:mp-weixin",
     "dev:app": "uni -p app",
@@ -51,20 +52,21 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4020320240708001",
-    "@dcloudio/uni-app-plus": "3.0.0-4020320240708001",
-    "@dcloudio/uni-components": "3.0.0-4020320240708001",
-    "@dcloudio/uni-h5": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4020320240708001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4020320240708001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4020320240708001",
+    "@dcloudio/uni-app": "3.0.0-4020420240722002",
+    "@dcloudio/uni-app-harmony": "3.0.0-4020420240722002",
+    "@dcloudio/uni-app-plus": "3.0.0-4020420240722002",
+    "@dcloudio/uni-components": "3.0.0-4020420240722002",
+    "@dcloudio/uni-h5": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-jd": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-lark": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-qq": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4020420240722002",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4020420240722002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4020420240722002",
     "@vue/shared": "^3.3.11",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.12",
@@ -72,35 +74,35 @@
     "tailwindcss-core-plugins-extractor": "^0.2.0",
     "uni-app-mp-html": "^2.5.0",
     "uview-plus": "^3.3.31",
-    "vue": "^3.4.38"
+    "vue": "^3.5.4",
+    "vue-i18n": "^9.1.9"
   },
-  "optionalDependencies": {},
   "devDependencies": {
-    "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4020320240708001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4020320240708001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4020320240708001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4020320240708001",
+    "@dcloudio/types": "^3.4.12",
+    "@dcloudio/uni-automator": "3.0.0-4020420240722002",
+    "@dcloudio/uni-cli-shared": "3.0.0-4020420240722002",
+    "@dcloudio/uni-stacktracey": "3.0.0-4020420240722002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4020420240722002",
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@iconify-json/ci": "^1.1.13",
     "@iconify-json/logos": "^1.1.43",
-    "@iconify-json/mdi": "^1.1.68",
-    "@iconify-json/ri": "^1.1.22",
-    "@iconify-json/svg-spinners": "^1.1.3",
+    "@iconify-json/mdi": "^1.2.0",
+    "@iconify-json/ri": "^1.2.0",
+    "@iconify-json/svg-spinners": "^1.2.0",
     "@rollup/plugin-commonjs": "^26.0.1",
-    "@vue/runtime-core": "^3.4.38",
+    "@vue/runtime-core": "^3.5.4",
     "autoprefixer": "^10.4.20",
     "miniprogram-api-typings": "^3.12.3",
-    "postcss": "^8.4.42",
+    "postcss": "^8.4.45",
     "postcss-pxtransform": "^4.0.4",
-    "postcss-rem-to-responsive-pixel": "^6.0.1",
+    "postcss-rem-to-responsive-pixel": "^6.0.2",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "unplugin-auto-import": "^0.18.2",
-    "vite": "5.4.2",
+    "vite": "5.4.3",
     "vue-eslint-parser": "^9.4.3",
-    "weapp-ide-cli": "^2.0.2",
-    "weapp-tailwindcss": "^3.5.0"
+    "weapp-ide-cli": "^2.0.3",
+    "weapp-tailwindcss": "^3.5.2"
   }
 }
