--- a/package.json
+++ b/package.json
@@ -102,12 +102,12 @@
     "@babel/core": "^7.25.2",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.8",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@commitlint/prompt-cli": "^19.4.1",
-    "@commitlint/types": "^19.0.3",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/prompt-cli": "^19.5.0",
+    "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^0.5.4",
-    "@icebreakers/eslint-config": "^0.4.3",
+    "@icebreakers/eslint-config": "^0.4.5",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.0.3",
     "@pnpm/workspace.find-packages": "^4.0.10",
@@ -153,8 +153,8 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@vitest/coverage-v8": "^2.0.5",
-    "@vitest/ui": "^2.0.5",
+    "@vitest/coverage-v8": "~2.0.5",
+    "@vitest/ui": "~2.0.5",
     "@weapp-tailwindcss/cli": "workspace:*",
     "anymatch": "^3.1.3",
     "autoprefixer": "^10.4.20",
@@ -178,7 +178,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "execa": "^9.3.1",
-    "express": "^4.20.0",
+    "express": "^4.21.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "get-value": "^3.0.1",
@@ -186,7 +186,7 @@
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.1.0",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "js-beautify": "^1.15.1",
     "just-diff": "^6.0.2",
     "klaw": "^4.1.0",
@@ -207,30 +207,30 @@
     "prettier": "^3.3.3",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
-    "rollup": "^4.21.2",
+    "rollup": "^4.21.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.78.0",
     "semver": "7.6.3",
     "set-value": "^4.1.0",
     "simple-git": "^3.26.0",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.11",
     "terser-webpack-plugin": "^5.3.10",
     "ts-morph": "^23.0.0",
     "tsd": "^0.31.2",
     "tslib": "^2.7.0",
     "tsup": "^8.2.4",
-    "tsx": "^4.19.0",
+    "tsx": "^4.19.1",
     "turbo": "^2.1.1",
     "typescript": "^5.6.2",
     "unbuild": "^2.0.0",
     "uuid": "^10.0.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
-    "vite": "^5.4.3",
+    "vite": "^5.4.4",
     "vite-plugin-inspect": "^0.8.7",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5",
+    "vitest": "~2.0.5",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.94.0",
     "webpack-build-utils": "^0.0.7",
