--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.11.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -89,10 +89,10 @@
     "lint:view": "npx @eslint/config-inspector",
     "publish-packages": "pnpm build && pnpm test && changeset version && changeset publish",
     "run:watch": "tsx scripts/watcher",
-    "script:init": "tsx scripts/monorepo/init.ts",
-    "script:sync": "tsx scripts/monorepo/sync.ts",
-    "script:clean": "tsx scripts/monorepo/clean.ts",
-    "script:mirror": "tsx scripts/monorepo/binaryMirror.ts"
+    "script:init": "monorepo init",
+    "script:sync": "monorepo sync",
+    "script:clean": "monorepo clean",
+    "script:mirror": "monorepo mirror"
   },
   "publishConfig": {
     "access": "public",
@@ -108,10 +108,10 @@
     "@commitlint/prompt-cli": "^19.5.0",
     "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^0.5.4",
-    "@icebreakers/eslint-config": "^0.5.1",
+    "@icebreakers/eslint-config": "^0.5.2",
+    "@icebreakers/monorepo": "^0.5.0",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.0.3",
-    "@pnpm/workspace.find-packages": "^4.0.10",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-json": "^6.1.0",
@@ -163,7 +163,6 @@
     "chokidar": "^4.0.0",
     "ci-info": "^4.0.0",
     "colorette": "^2.0.20",
-    "comment-json": "^4.2.5",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-to-tailwindcss-plugin": "^0.3.0",
@@ -175,10 +174,7 @@
     "diff": "^7.0.0",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "eslint": "^9.10.0",
-    "eslint-config-icebreaker": "^1.2.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint": "^9.11.0",
     "execa": "^9.4.0",
     "express": "^4.21.0",
     "fast-glob": "^3.3.2",
@@ -190,7 +186,6 @@
     "html-loader": "^5.1.0",
     "husky": "^9.1.6",
     "js-beautify": "^1.15.1",
-    "just-diff": "^6.0.2",
     "klaw": "^4.1.0",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
@@ -209,12 +204,11 @@
     "prettier": "^3.3.3",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
-    "rollup": "^4.21.3",
+    "rollup": "^4.22.2",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.79.1",
+    "sass": "^1.79.2",
     "semver": "7.6.3",
     "set-value": "^4.1.0",
-    "simple-git": "^3.26.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.12",
     "terser-webpack-plugin": "^5.3.10",
@@ -231,7 +225,6 @@
     "vinyl-fs": "^4.0.0",
     "vite": "^5.4.6",
     "vite-plugin-inspect": "^0.8.7",
-    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "~2.0.5",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.94.0",
