--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,5 @@
 name: Release
 
-permissions:
-  contents: write
-
 on:
   push:
     branches:
@@ -12,6 +9,11 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 env:
   HUSKY: 0
+
+permissions:
+  pull-requests: write
+  contents: write
+  id-token: write
 
 jobs:
   release:
