feat: commit npx weapp-tw init function https://github.com/sonofmagic/weapp-tailwindcss/discussions/334

--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -156,12 +156,14 @@
     "@tailwindcss-mangle/shared": "~3.0.0",
     "@weapp-core/escape": "~2.1.0",
     "@weapp-core/regex": "~1.0.1",
+    "consola": "^3.2.3",
     "debug": "~4.3.7",
     "htmlparser2": "9.1.0",
     "loader-utils": "2.0.4",
     "lru-cache": "10.4.3",
     "magic-string": "0.30.11",
     "md5": "2.3.0",
+    "npm-registry-fetch": "^17.1.0",
     "postcss": "~8.4.47",
     "postcss-rem-to-responsive-pixel": "~6.0.2",
     "postcss-selector-parser": "~6.1.2",
