--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@ast-grep/napi": "^0.27.1",
+    "@ast-grep/napi": "^0.27.2",
     "@babel/core": "^7.25.2",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.8",
@@ -146,6 +146,7 @@
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.5.5",
+    "@types/npm-registry-fetch": "^8.0.7",
     "@types/semver": "^7.5.8",
     "@types/set-value": "^4.0.3",
     "@types/uuid": "^10.0.0",
@@ -160,7 +161,7 @@
     "anymatch": "^3.1.3",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
-    "chokidar": "^4.0.0",
+    "chokidar": "^4.0.1",
     "ci-info": "^4.0.0",
     "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
@@ -194,6 +195,7 @@
     "mini-css-extract-plugin": "^2.9.1",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^4.1.0",
+    "npm-registry-fetch": "^17.1.0",
     "only-allow": "^1.2.1",
     "pathe": "^1.1.2",
     "pkg-types": "^1.2.0",
