--- a/apps/weapp-library/package.json
+++ b/apps/weapp-library/package.json
@@ -15,7 +15,7 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "miniprogram-api-typings": "latest"
+    "miniprogram-api-typings": "^4.0.0"
   },
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
