--- a/apps/weapp-wechat-zhihu/package.json
+++ b/apps/weapp-wechat-zhihu/package.json
@@ -23,6 +23,6 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "miniprogram-api-typings": "latest"
+    "miniprogram-api-typings": "^4.0.0"
   }
 }
